# Abdelrahman_AI_Career_Agent

./: .dockerignore  .env.example  Dockerfile  README.md  entrypoint.sh  gradio_app.py  main_api.py  pyproject.toml  test_main.py
data/: projects_portfolio.md
notebooks/: 01_to_pageindex.ipynb  02_get_TOC_and_node_structure.ipynb  03_langgraph.ipynb
src/Data_ingestion_block/: data_ingestion.py
src/Data_ingestion_block/utils/: submit_file.py  submit_folder.py
src/Services/: graph_service.py  retrieval_service.py
src/Services/llm_services/: llm_factory.py
src/api_routes/: base_api.py  data_ingestion_api.py  graph_api.py  retrieval_api.py
src/api_routes/apis_schemas/: data_ingestion_schemas.py  graph_schemas.py  retrieval_schemas.py
src/graph_block/: graph.py
src/graph_block/nodes/: docs_titles_node.py  docs_toc_node.py  generator_node.py  router_node.py  tools_node.py
src/graph_block/prompts/: docs_titles_prompt.py  docs_toc_prompt.py  generator_prompt.py  router_prompt.py
src/graph_block/schemas/: docs_title_node_schema.py  docs_toc_node_schema.py  graph_state.py  route_node_schema.py
src/graph_block/tools/: career_tools.py
src/retrieval_block/: tree_retrieval.py
src/retrieval_block/utils/: build_all_indexes.py  build_all_trees_index.py  build_index.py  clean_child_nodes.py  get_docs_toc.py  get_related_content.py  get_tree_toc.py  get_trees_titles.py  tree_utils.py
